[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexer = { path = "../lexer" }
anyhow.workspace = true
thiserror.workspace = true
lalrpop-util.workspace = true

[build-dependencies]
lalrpop.workspace = true
